benchmark with spring aop lab